--- a/style.css
+++ b/style.css
@@ -99,52 +99,26 @@ body{
 #footer li a:hover{
   color: white;
 }
-.dropbtn {
-    background-color: transparent;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    transition: 0.5s;
-    cursor: pointer;
+  .svg{
+    height: 50px;
+    width: 50px;
+    color: orange;
   }
-  
+  .svg-bg-div{
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .svg-bg{
+    z-index: -1;
+    position: fixed;
+    width: 2.5cm;
+    height: 2.5cm;
+    color: rgba(8, 114, 45, 0.2);
+    transform: rotate(-50deg);
+  }
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
   }
   
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1
-
-    }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
-    background-color: cadetblue;
-
-  }
